PartnerDemo/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>JBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harman Kardon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AKG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infinity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>Family</controllingField>
            <picklistValues>
                <fullName>Over Ear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Ear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Ear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Microphone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Theater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sounds Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Speakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Docks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Speakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stand-Alone Speakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom-Install Speakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subwoofers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amplifiers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected Car</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>MID(Image_URL__c, 33, 55)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <description>Available stock of the product</description>
        <label>Stock</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quantity_Sold__c</fullName>
        <label>Total Quantity Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Brand__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Partner_Portal1</fullName>
        <active>true</active>
        <label>Partner Portal1</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Portal2</fullName>
        <active>true</active>
        <label>Partner Portal2</label>
    </recordTypes>
</CustomObject>